--- a/app/views/mixpanel/_mixpanel.haml
+++ b/app/views/mixpanel/_mixpanel.haml
@@ -9,7 +9,7 @@
       'track_forms','register','register_once','unregister','identify','alias','name_tag','set_config',
       'people.set','people.set_once','people.increment','people.track_charge','people.append'];
       for(e=0;e<h.length;e++)d(g,h[e]);a._i.push([b,c,f])};a.__SV=1.2;})(document,window.mixpanel||[]);
-  mixpanel.init("#{ENV['MIXPANEL_SECRET_TOKEN']}");
+  mixpanel.init("#{ENV['MIXPANEL_SECRET_TOKEN']}", #{Mixingpanel.configuration.to_json});
 
 -# Setup Verbose and Debug mode in Development environment
 - if not Rails.env.production? and not Rails.env.test?
